<resources>
    <string name="app_name" translatable="false">v2rayNG Pro</string>
    <string name="app_widget_name">Switch</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="migration_success">Data migration success!</string>
    <string name="action_stop_service">Stop service</string>
    <string name="migration_fail">Data migration failed!</string>
    <string name="pull_down_to_refresh">Please pull down to refresh!</string>
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="toast_permission_denied_notification">Unable to obtain the notification permission</string>
    <string name="notification_action_more">Click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>
    <string name="title_server">Config</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_edit_config">Edit config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import from QRcode</string>
    <string name="menu_item_import_config_clipboard">Import from Clipboard</string>
    <string name="menu_item_import_config_local">Import from locally</string>
    <string name="menu_item_import_config_policy_group">Add [Policy group]</string>
    <string name="menu_item_import_config_manually_vmess">Add [VMess]</string>
    <string name="menu_item_import_config_manually_vless">Add [VLESS]</string>
    <string name="menu_item_import_config_manually_ss">Add [Shadowsocks]</string>
    <string name="menu_item_import_config_manually_socks">Add [SOCKS]</string>
    <string name="menu_item_import_config_manually_http">Add [HTTP]</string>
    <string name="menu_item_import_config_manually_trojan">Add [Trojan]</string>
    <string name="menu_item_import_config_manually_wireguard">Add [Wireguard]</string>
    <string name="menu_item_import_config_manually_hysteria2">Add [Hysteria2]</string>
    <string name="del_config_comfirm">Confirm delete ?</string>
    <string name="del_invalid_config_comfirm">Please test before deleting! Confirm delete ?</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_mode_type">gRPC mode</string>
    <string name="server_lab_request_host">host</string>
    <string name="server_lab_request_host_http">http host</string>
    <string name="server_lab_request_host_ws">ws host</string>
    <string name="server_lab_request_host_httpupgrade">httpupgrade host</string>
    <string name="server_lab_request_host_xhttp">xhttp host</string>
    <string name="server_lab_request_host_h2">h2 host</string>
    <string name="server_lab_request_host_quic">QUIC security</string>
    <string name="server_lab_request_host_grpc">gRPC Authority</string>
    <string name="server_lab_path">path</string>
    <string name="server_lab_path_ws">ws path</string>
    <string name="server_lab_path_httpupgrade">httpupgrade path</string>
    <string name="server_lab_path_xhttp">xhttp path</string>
    <string name="server_lab_path_h2">h2 path</string>
    <string name="server_lab_path_quic">QUIC key</string>
    <string name="server_lab_path_kcp">kcp seed</string>
    <string name="server_lab_path_grpc">gRPC serviceName</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="server_lab_stream_fingerprint" translatable="false">Fingerprint</string>
    <string name="server_lab_stream_alpn">Alpn</string>
    <string name="server_lab_allow_insecure">allowInsecure</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_address3">address</string>
    <string name="server_lab_port3">port</string>
    <string name="server_lab_id3">password</string>
    <string name="server_lab_security3">security</string>
    <string name="server_lab_id4">Password(Optional)</string>
    <string name="server_lab_security4">User(Optional)</string>
    <string name="server_lab_encryption">encryption</string>
    <string name="server_lab_flow">flow</string>
    <string name="server_lab_public_key">PublicKey</string>
    <string name="server_lab_preshared_key">PreSharedKey(optional)</string>
    <string name="server_lab_short_id">ShortId</string>
    <string name="server_lab_spider_x">SpiderX</string>
    <string name="server_lab_mldsa65_verify">Mldsa65Verify</string>
    <string name="server_lab_secret_key">SecretKey</string>
    <string name="server_lab_reserved">Reserved(Optional, separated by commas)</string>
    <string name="server_lab_local_address">Local address (optional IPv4/IPv6, separated by commas)</string>
    <string name="server_lab_local_mtu">Mtu(optional, default 1420)</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_none_data">There is nothing</string>
    <string name="toast_incorrect_protocol">Incorrect protocol</string>
    <string name="toast_decoding_failed">Decoding failed</string>
    <string name="title_file_chooser">Select a config</string>
    <string name="toast_require_file_manager">Please install a File Manager.</string>
    <string name="server_customize_config">Customize config</string>
    <string name="toast_config_file_invalid">Invalid config</string>
    <string name="server_lab_content">Content</string>
    <string name="toast_none_data_clipboard">There is no data in the clipboard</string>
    <string name="toast_invalid_url">Invalid URL</string>
    <string name="toast_insecure_url_protocol">Please do not use the insecure HTTP protocol subscription address</string>
    <string name="server_lab_need_inbound">Ensure inbounds port is consistent with the settings</string>
    <string name="toast_malformed_josn">Config malformed</string>
    <string name="server_lab_request_host6">Host(SNI)(Optional)</string>
    <string name="toast_action_not_allowed">Action not allowed</string>
    <string name="server_obfs_password">Obfs password</string>
    <string name="server_lab_port_hop">Port Hopping(will override the port)</string>
    <string name="server_lab_port_hop_interval">Port Hopping Interval</string>
    <string name="server_lab_bandwidth_down">Bandwidth down (Supported units: k/m/g/t)</string>
    <string name="server_lab_bandwidth_up">Bandwidth up (Supported units: k/m/g/t)</string>
    <string name="server_lab_xhttp_mode">XHTTP Mode</string>
    <string name="server_lab_xhttp_extra">XHTTP Extra raw JSON, format: { XHTTPObject }</string>
    <string name="server_lab_ech_config_list">EchConfigList</string>
    <string name="server_lab_ech_force_query">EchForceQuery</string>
    <string name="server_lab_pinned_ca256">Certificate fingerprint (SHA-256)</string>
    <string name="toast_asset_copy_failed">File copy failed, please use File Manager</string>
    <string name="menu_item_add_asset">Add asset</string>
    <string name="menu_item_add_file">Add files</string>
    <string name="menu_item_add_url">Add URL</string>
    <string name="menu_item_scan_qrcode">Scan QRcode</string>
    <string name="title_url">URL</string>
    <string name="menu_item_download_file">Download files</string>
    <string name="title_user_asset_add_url">Add asset URL</string>
    <string name="msg_file_not_found">File not found</string>
    <string name="msg_remark_is_duplicate">The remarks already exists</string>
    <string name="asset_geo_files_sources">Geo files source (optional)</string>
    <string name="msg_dialog_progress">Loading</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="menu_item_invert_selection">Invert selection</string>
    <string name="msg_enter_keywords">Enter keywords</string>
    <string name="switch_bypass_apps_mode">Bypass Mode</string>
    <string name="menu_item_select_proxy_app">Auto select proxy app</string>
    <string name="msg_downloading_content">Downloading content</string>
    <string name="menu_item_export_proxy_app">Export to Clipboard</string>
    <string name="menu_item_import_proxy_app">Import from Clipboard</string>
    <string name="per_app_proxy_settings">Per-app settings</string>
    <string name="per_app_proxy_settings_enable">Enable per-app</string>
    <string name="title_settings">Settings</string>
    <string name="title_advanced">Advanced Settings</string>
    <string name="title_core_settings">Core Settings</string>
    <string name="title_vpn_settings">VPN Settings</string>
    <string name="title_pref_per_app_proxy">Per-app proxy</string>
    <string name="summary_pref_per_app_proxy">General: Checked apps use proxy, unchecked apps connect directly; \nBypass mode: checked apps connect directly, unchecked apps use proxy. \nThe option to automatically select proxy applications is in the menu</string>
    <string name="title_pref_is_booted">Auto connect at startup</string>
    <string name="summary_pref_is_booted">Automatically connects to the selected server at startup, which may be unsuccessful</string>
    <string name="title_pref_auto_remove_invalid_after_test">Auto delete invalid config after testing</string>
    <string name="summary_pref_auto_remove_invalid_after_test">Test results may not be accurate; deleted config cannot be recovered.</string>
    <string name="title_pref_auto_sort_after_test">Auto sort after testing</string>
    <string name="summary_pref_auto_sort_after_test">Test results may not be accurate;</string>
    <string name="title_mux_settings">Mux Settings</string>
    <string name="title_pref_mux_enabled">Enable Mux</string>
    <string name="title_pref_feedback">Feedback</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="title_about">About</string>
    <string name="title_source_code">Fork source code</string>
    <string name="title_upstream_project">Original v2rayNG project</string>
    <string name="title_release_history">Release history</string>
    <string name="title_oss_license">Open Source licenses</string>
    <string name="title_tg_channel">Telegram channel</string>
    <string name="sub_setting_remarks">remarks</string>
    <string name="sub_setting_enable">Enable update</string>
    <string name="sub_auto_update">Enable automatic update</string>
    <string name="update_check_for_update">Check for update</string>
    <string name="update_check_pre_release">Check Pre-release</string>
    <string name="server_menu_qrcode">QR Code</string>
    <string name="server_menu_clipboard">Copy Link</string>
    <string name="server_menu_full_export">Export Full Config</string>
    <string name="server_menu_share">Share</string>
    <string name="server_menu_edit">Edit</string>
    <string name="server_menu_delete">Delete</string>
    <string name="update_download_and_install">Download &amp; Install</string>
    <string name="update_release_notes">Release notes</string>
    <string name="update_later">Later</string>
</resources>