<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_qrcode"
        android:icon="@drawable/ic_qu_scan_24dp"
        android:title="@string/server_menu_qrcode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clipboard"
        android:icon="@drawable/ic_copy"
        android:title="@string/server_menu_clipboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_full_export"
        android:icon="@drawable/ic_description_24dp"
        android:title="@string/server_menu_full_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/server_menu_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_24dp"
        android:title="@string/server_menu_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/server_menu_delete"
        app:showAsAction="never" />

</menu>
