<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_spacing_dp16">

        <EditText
            android:id="@+id/et_sub_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sub_setting_remarks"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tv_sub_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp16"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sub_setting_enable" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/chk_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:theme="@style/BrandedSwitch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sub_auto_update" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/chk_auto_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:theme="@style/BrandedSwitch" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
